changed description and photos in Furry game

--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
                             </div>
                         </article>
                         <article class="projects_item" id="furry">
-                            <h3 class="projects_inner_header">Furry game</h3>
+                            <h3 class="projects_inner_header">Collect cars</h3>
                             <div class="projects_inner_item_container">
                                 <div class="projects_item_photo photo-4"></div>
                                 <div class="projects_item_text_container">
-                                    <p class="projects_item_description">Fluffy Furry is hungry and wants to eat the dot. Feed the Furry by leading it to eat as many dots as possible. Be careful not to hit the walls because Furry will faint and stop moving.</p>
-                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm</p>
+                                    <p class="projects_item_description">Modification of Furry game where Furry wants to eat the dot. In this game the Player collects cars. Collect as many of them as you want. Be careful not to hit the walls because the game will finish. After finishing the game all collected cars are displayed on screen.</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, npm, Webpack</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank">Click to play</a></button>
                             </div>
