changes name furry game

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#tetris">Games: Tetris</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#memory">Games: Memory for scientists</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#life">Games: Game of life</a></li>
-                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#furry">Games: Furry game</a></li>
+                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#furry">Games: Collecting cars</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#sit">Website: Sit on chair</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#animation">Website: Animation</a></li>
                 </ul>
@@ -30,7 +30,7 @@
                         <li class="nav_list2_item"><a class="nav_link" href="#tetris">Tetris</a></li>
                         <li class="nav_list2_item"><a class="nav_link" href="#memory">Memory for scientists</a></li>
                         <li class="nav_list2_item"><a class="nav_link" href="#life">Game of life</a></li>
-                        <li class="nav_list2_item"><a class="nav_link" href="#furry">Furry game</a></li>
+                        <li class="nav_list2_item"><a class="nav_link" href="#furry">Collecting cars</a></li>
                     </ul>
                 </li>
                 <li class="nav_list2_container">Web pages/Animation
@@ -89,7 +89,7 @@
                             </div>
                         </article>
                         <article class="projects_item" id="furry">
-                            <h3 class="projects_inner_header">Collect cars</h3>
+                            <h3 class="projects_inner_header">Collecting cars</h3>
                             <div class="projects_inner_item_container">
                                 <div class="projects_item_photo photo-4"></div>
                                 <div class="projects_item_text_container">
@@ -124,7 +124,7 @@
                                 <div class="projects_item_photo photo-6"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description (flying in and out, change of color and rotation) and 2) appearance and moving of text (flying-in and out, rotation, change of size).</p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3, ES6</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank">Click to visit</a></button>
                             </div>
