--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class="container">
             <div class="nav_logo">AS</div>
             <div class="nav_hamburger">
-                <span class="nav_hamburger_sign">&#9776;</span>
+                <span class="nav_hamburger_sign">&#x2630;</span>
                 <ul class="nav_hamburger_list">
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#tetris">Games: Tetris</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#memory">Games: Memory for scientists</a></li>
