corrected technologies part

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <div class="projects_item_photo photo-1"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm and Babel-loader</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/" target="_blank">Click to play</a></button>
                             </div>
@@ -71,7 +71,7 @@
                                 <div class="projects_item_photo photo-2"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Are you a scientist? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! The game is not a matching of two identical photos but you have to find proper pair - name and description. Checking the matching is done only when you decide to do so by clicking the button. Enjoy learning!</p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/" target="_blank">Click to play</a></button>
                             </div>
@@ -82,7 +82,7 @@
                                 <div class="projects_item_photo photo-3"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
-                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, React, npm, Webpack</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank">Click to play</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank">Click to play (React version)</a></button>
@@ -94,7 +94,7 @@
                                 <div class="projects_item_photo photo-4"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Modification of Furry game where Furry wants to eat the dot. In this game the Player collects cars. Collect as many of them as you want. Be careful not to hit the walls because the game will finish. After finishing the game all collected cars are displayed on screen.</p>
-                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, ES6, npm, Webpack</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm, Webpack, RWD, mobile first</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank">Click to play</a></button>
                             </div>
@@ -112,7 +112,7 @@
                                     <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage. Original page is written in HTML5. Second version of page is written in React (part of original page). Features: upon clicking on ">" and "<" the photo of chair is changing.
                                     You can compose your own chair in proper section.
                                     </p>
-                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, React, npm, Webpack</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank">Click to visit</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank">Click to visit (React version)</a></button>
