added section with PrefixesAdder

--- a/index_20180103.html
+++ b/index_20180103.html
@@ -21,7 +21,6 @@
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#furry">Games: Collecting cars</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#sit">Website: Sit on chair</a></li>
                     <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#animation">Website: Animation</a></li>
-                    <li class="nav_hamburger_list_item"><a class="nav_hamburger_link" href="#prefixesadder">Program: PrefixesAdder</a></li>
                 </ul>
 
             </div>
@@ -38,11 +37,6 @@
                     <ul class="nav_list2 web">
                         <li class="nav_list2_item"><a class="nav_link" href="#sit">Sit on chair</a></li>
                         <li class="nav_list2_item"><a class="nav_link" href="#animation">Animation</a></li>
-                    </ul>
-                </li>
-                <li class="nav_list2_container">Programs
-                    <ul class="nav_list2 programs">
-                        <li class="nav_list2_item"><a class="nav_link" href="#prefixesadder">PrefixesAdder</a></li>
                     </ul>
                 </li>
             </ul>
@@ -66,7 +60,7 @@
                                 <div class="projects_item_photo photo-1"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
-                                    <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS, ES6, Webpack, Rest API, npm and Babel-loader</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, ES6, Webpack, Rest API, npm and Babel-loader</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/" target="_blank">Click to play</a></button>
                             </div>
@@ -77,7 +71,7 @@
                                 <div class="projects_item_photo photo-2"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Are you a scientist? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! The game is not a matching of two identical photos but you have to find proper pair - name and description. Checking the matching is done only when you decide to do so by clicking the button. Enjoy learning!</p>
-                                    <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/" target="_blank">Click to play</a></button>
                             </div>
@@ -88,7 +82,7 @@
                                 <div class="projects_item_photo photo-3"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
-                                    <p class="projects_item_description"><b>Technology used:</b> HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank">Click to play</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank">Click to play (React version)</a></button>
@@ -100,7 +94,7 @@
                                 <div class="projects_item_photo photo-4"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Modification of Furry game where Furry wants to eat the dot. In this game the Player collects cars. Collect as many of them as you want. Be careful not to hit the walls because the game will finish. After finishing the game all collected cars are displayed on screen.</p>
-                                    <p class="projects_item_description"><b>Technology used:</b> HTML5, CSS3, JS, npm, Webpack, RWD, mobile first</p>
+                                    <p class="projects_item_description">Technology used: HTML5, CSS3, JS, npm, Webpack, RWD, mobile first</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank">Click to play</a></button>
                             </div>
@@ -118,7 +112,7 @@
                                     <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage. Original page is written in HTML5. Second version of page is written in React (part of original page). Features: upon clicking on ">" and "<" the photo of chair is changing.
                                     You can compose your own chair in proper section.
                                     </p>
-                                    <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank">Click to visit</a></button>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank">Click to visit (React version)</a></button>
@@ -130,25 +124,9 @@
                                 <div class="projects_item_photo photo-6"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description (flying in and out, change of color and rotation) and 2) appearance and moving of text (flying-in and out, rotation, change of size).</p>
-                                    <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3</p>
+                                    <p class="projects_item_description">Technology: HTML5, CSS3</p>
                                 </div>
                                 <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank">Click to visit</a></button>
-                            </div>
-                        </article>
-                    </div>
-                </section>
-                <section class="projects_categories programs">
-                    <h2 class="projects_outer_header">Programs</h2>
-                    <div class="projects_item_container">
-                        <article class="projects_item" id="prefixesadder">
-                            <h3 class="projects_inner_header" >PrefixesAdder</h3>
-                            <div class="projects_inner_item_container">
-                                <div class="projects_item_text_container">
-                                    <p class="projects_item_description">You don't want to waste your precious time updating prefixes in your awesome css file? Use this clever Python program and save hours of your precious time, which then you can spend on ... let's guess... programming! (Of course)
-                                    </p>
-                                    <p class="projects_item_description"><b>Technology:</b> Python</p>
-                                </div>
-                                <button class="projects_button"><a href="https://github.com/annastachurska/PrefixesAdder" target="_blank">Click to visit</a></button>
                             </div>
                         </article>
                     </div>
