--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <title>Portfolio</title>
     <meta charset="UTF-8" />
+    <meta name="description" content="Portfolio of web page author">
+    <meta name="keywords" content="games, webpages, programs">
+    <meta name="author" content="Anna Stachurska">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css?family=Courgette" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet" />
@@ -11,7 +14,7 @@
 <body>
     <header>
         <nav class="container">
-            <div class="nav_logo">AS</div>
+            <div class="nav_logo" title="Created by Anna Stachurska">AS</div>
             <div class="nav_hamburger">
                 <span class="nav_hamburger_sign">&#x2630;</span>
                 <ul class="nav_hamburger_list">
@@ -63,46 +66,46 @@
                         <article class="projects_item" id="tetris">
                             <h3 class="projects_inner_header" >Tetris</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-1"></div>
+                                <div class="projects_item_photo photo-1" role="img" aria-label="Photo of Tetris"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Challenge yourself with modified version of Tetris game! Be carefull - the bomb is falling! Decide quickly what to destroy. Want to check your reaction to unexpected situation - just rotate the board  upside-down. Or maybe you will be disoriented when action of left and right arrows will be switched? Try it!</p>
                                     <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS, ES6, Webpack, Rest API, npm and Babel-loader</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/" target="_blank">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Tetris/" target="_blank" title="Go to Tetris on Github">Click to play</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="memory">
                             <h3 class="projects_inner_header">Memory for scientists</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-2"></div>
+                                <div class="projects_item_photo photo-2" role="img" aria-label="Photo of Memory"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Are you a scientist? Or maybe you are curious about science terminology game? Try it and check your knowledge or luck! The game is not a matching of two identical photos but you have to find proper pair - name and description. Checking the matching is done only when you decide to do so by clicking the button. Enjoy learning!</p>
                                     <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/" target="_blank">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Memory_for_scientists/" target="_blank" title="Go to Memory for scientists on Github">Click to play</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="life">
                             <h3 class="projects_inner_header">Game of life</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-3"></div>
+                                <div class="projects_item_photo photo-3" role="img" aria-label="Photo of Game of life"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Observe the fascinating simulation of life of cells. Is it to crowded for them to live? Or maybe they are incapable of surviving on their own? Play the game and check how the cell living status evolves! You can always pause the game and restart it. You can also reset the board and start anew. Watch the beautiful structures created by living cells!</p>
                                     <p class="projects_item_description"><b>Technology used:</b> HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank">Click to play</a></button>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank">Click to play (React version)</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Game_of_life/" target="_blank" title="Go to Game of Life on Github">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Game_of_Life/" target="_blank" title="Go to Game of Life written in React on Github">Click to play (React version)</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="furry">
                             <h3 class="projects_inner_header">Collecting cars</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-4"></div>
+                                <div class="projects_item_photo photo-4" role="img" aria-label="Photo of Collecting cars"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Modification of Furry game where Furry wants to eat the dot. In this game the Player collects cars. Collect as many of them as you want. Be careful not to hit the walls because the game will finish. After finishing the game all collected cars are displayed on screen.</p>
                                     <p class="projects_item_description"><b>Technology used:</b> HTML5, CSS3, JS, npm, Webpack, RWD, mobile first</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank">Click to play</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Furry_Game/" target="_blank" title="Go to Furry game on Github">Click to play</a></button>
                             </div>
                         </article>
                     </div>
@@ -113,26 +116,26 @@
                         <article class="projects_item" id="sit">
                             <h3 class="projects_inner_header" >Sit on chair</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-5"></div>
+                                <div class="projects_item_photo photo-5" role="img" aria-label="Photo of a webpage 'Sit on chair'"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Check the website of show and choose the chair. Example of shop webpage. Original page is written in HTML5. Second version of page is written in React (part of original page). Features: upon clicking on ">" and "<" the photo of chair is changing.
                                     You can compose your own chair in proper section.
                                     </p>
                                     <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3, JS, (React version: ES6, React, npm, Webpack, Babel-loader)</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank">Click to visit</a></button>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank">Click to visit (React version)</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Sit_on_chair/" target="_blank" title="Go to Sit on chair on Github">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/React_Sit_on_chair/" target="_blank" title="Go to Sit on chair written in React on Github">Click to visit (React version)</a></button>
                             </div>
                         </article>
                         <article class="projects_item" id="animation">
                             <h3 class="projects_inner_header" >Animation</h3>
                             <div class="projects_inner_item_container">
-                                <div class="projects_item_photo photo-6"></div>
+                                <div class="projects_item_photo photo-6" role="img" aria-label="Photo of an animation"></div>
                                 <div class="projects_item_text_container">
                                     <p class="projects_item_description">Enjoy the animation written in CSS. The animation consists of two parts: 1) appearance and moving icon and description (flying in and out, change of color and rotation) and 2) appearance and moving of text (flying-in and out, rotation, change of size).</p>
                                     <p class="projects_item_description"><b>Technology:</b> HTML5, CSS3</p>
                                 </div>
-                                <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://annastachurska.github.io/Animation/" target="_blank" title="Go to Animation site on Github">Click to visit</a></button>
                             </div>
                         </article>
                     </div>
@@ -148,7 +151,7 @@
                                     </p>
                                     <p class="projects_item_description"><b>Technology:</b> Python</p>
                                 </div>
-                                <button class="projects_button"><a href="https://github.com/annastachurska/PrefixesAdder" target="_blank">Click to visit</a></button>
+                                <button class="projects_button"><a href="https://github.com/annastachurska/PrefixesAdder" target="_blank" title="Go to PrefixesAdder life on Github">Click to visit</a></button>
                             </div>
                         </article>
                     </div>
